package QuizCD;

public class Answer {
    private String text;

    public Answer(final String text) {
        this.text = text;
    }

    public String getText() {
        return text;
    }
}
